[metadata]
name = byond-topicsend
version = 0.1
author = Tamber
author_email = tamber@furryhelix.co.uk
description = Sending Topic packets to BYOND servers, and receive responses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/TamberP/byond-topicsend
classifiers =
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: BSD License

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
